--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
     </ol>
     <p class="italicP">Paragraf Etiam vel ullamcorper nunc. Proin nec felis nec nulla finibus semper et sed augue. Vivamus iaculis pellentesque scelerisque. Quisque non urna at quam sollicitudin pulvinar. Vivamus nec tellus id felis varius porttitor sit amet vel elit. Vivamus facilisis luctus accumsan. Fusce id nulla diam. In malesuada porttitor massa at vulputate. Ut scelerisque a libero et accumsan. Aliquam nec gravida tortor. Duis dolor lectus, malesuada in nulla a, volutpat fermentum neque. Sed lorem felis, ultrices a iaculis in, pulvinar id nunc. Praesent ac mauris vel ligula bibendum porta.    
         </p>
+    <h3 class="zmiana">Zmiana xDD</h3>
 </body>
 
 
