Add poor responsive styling

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
         <script src="components/product.js"></script>
     </head>    
     <body>
-        <section id="listing"></section>
+        <div class="container">
+            <section class="section" id="listing"></section>
+        </div>
         <script src="main.js"></script>
     </body>
 </html>
